dev/remote-package/tests/parser/syntax-error/es6.js
export default class Foo extends Map {
	constructor {
		super();
	}
}
